fixed spacing at bottom of mobile view

--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -22,13 +22,13 @@
   --color-dark-3: #800E13;
   --color-dark-4: #95232A;
   --color-accent-dark: #E22030;
-  --color-light-bg: #d8bbff;
-  --color-light-2: #d0d1ff;
-  --color-light-3: #c8e7ff;
-  --color-light-4: #8E7DBE;
+  --color-light-bg: #A2D2DF;
+  --color-light-2: #F6EFBD;
+  --color-light-3: #E4C087;
+  --color-light-4: #BC7C7C;
   --color-accent-light: #deaaff;
   --color-light-text: #320052;
-  --color-light-text-2: #26003D;
+  --color-light-text-2: #1b0e0e;
   --color-dark-text: #FBDADE;
   --color-dark-text-2: #F0A8AB;
   --color-text-error: red;
